--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
@@ -17,6 +18,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.8.1",
     "morgan": "~1.9.1",
+    "node-xlsx": "^0.24.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "winston": "^3.17.0",
